Map was added om main page

--- a/app/index.html
+++ b/app/index.html
@@ -26,72 +26,41 @@
 			<li class="blue_item star"><a href="#">Избранное</a></li>
 		</ul>
 	</header>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	<main id="main">
+	<div class="main-bottom-map-wrapper">
+		<div class="main-bottom-map" id="bottom_map">
+
+		</div>
+		<div class="main-bottom-map-info-block">
+			<div class="main-bottom-map-info-block-title">
+				<h2>Контакты</h2>
+			</div>
+			<div class="main-bottom-map-info-block-content">
+				<h3>Отдел продаж компании:</h3>
+				<div class="main-bottom-map-info-block-content-number"><span>+7 (495) 123-32-23</span></div>
+				<div class="main-bottom-map-info-block-content-number"><span>+7 (495) 321-12-21</span></div>
+			</div>
+			<div class="main-bottom-map-info-block-content">
+				<h3>О компании:</h3>
+				<div class="main-bottom-map-info-block-content-number"><span>+7 (495) 123-32-23</span></div>
+				<div class="main-bottom-map-info-block-content-email"><span>info@domira.com.ua</span></div>
+			</div>
+			<div class="main-bottom-map-social-block">
+				<ul>
+					<li>
+						<a href="#"><img src="img/social/fb.png" alt="facebook"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/social/inst.png" alt="instagram"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/social/in.png" alt="linkedin"></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	</main>
 	<footer>
 		<span>© 2016, Domira Development</span>
 	</footer>
@@ -101,5 +70,17 @@
       crossorigin="anonymous"></script>
 	<script src="js/main.js"></script>
 	<script src="js/libs.min.js"></script>
+	<script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('bottom_map'), {
+          center: {lat: -35.394, lng: 140.234},
+          zoom: 8,
+					disableDefaultUI: true
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkZtj_NS59hdszi8CYfKp6lYmQnaTMYAI&callback=initMap"
+    async defer></script>
 </body>
 </html>
