Added layout block in home_domira page

--- a/app/index.html
+++ b/app/index.html
@@ -26,75 +26,27 @@
 			<li class="blue_item star"><a href="#">Избранное</a></li>
 		</ul>
 	</header>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
-	<footer>
-		<span>© 2016, Domira Development</span>
-	</footer>
+	<main id="main">
+		<div class="wrapper">
+			<div class="container">
+				<div class="layout">
+					<div class="page-title">
+						<h3>топ 5 планировок</h3>
+					</div>
+					<ul>
+						<li><a href="#">1 комнатная квартира</a></li>
+						<li><a href="#">2-х комнатная</a></li>
+						<li><a href="#">3-х комнатная</a></li>
+						<li><a href="#">Двухуровневая квартира</a></li>
+					</ul>
+					<a href="#" class="layout_img">
+						<img src="img/2-54-70.png" alt="">
+					</a>
+					<a href="#" class="button">Подробнее</a>
+				</div>
+			</div>
+		</div>
+	</main>
 	<script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
